# BigFloat

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: googletest.cmake
python/: CMakeLists.txt
src/: BigFloat.cpp  BigFloat.h  BigFloat.i  BigInteger.cpp  BigInteger.h
tests/: CMakeLists.txt  main.cpp  testBigInteger.cpp
